--- a/godfather-banks/src/Banker.css
+++ b/godfather-banks/src/Banker.css
@@ -49,8 +49,7 @@ body {
     align-items: center;
   }
   
-  .login-button,
-  .register-button {
+  .logout-button {
     background-color: #FFFFFF;
     color: #303F9F;
     border: none;
@@ -59,4 +58,130 @@ body {
     margin-left: 10px;
     font-weight: bold;
     cursor: pointer;
+  }
+
+  .body-n-footer {
+    flex-grow: 1; /* Allow the body to grow and fill the remaining space */
+  }
+
+  .body {
+    margin: 3px;
+    display: flex;
+    height: 654px;
+  }
+
+  .button-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  }
+
+  .button-group button {
+    width: 80px;
+    height: 100%;
+  }
+
+  .button-group button:first-child {
+    margin-right: 4px;
+  }
+
+  .button-group button:last-child {
+    margin-left: 4px;
+  }
+
+  button{
+    background-color:rgb(237, 237, 237);
+    border-width: 1px;
+    border-radius: 4px;
+    border-style: solid;
+  }
+
+  button.selected{
+    background-color:rgb(188, 188, 188);
+    border-radius: 4px;
+    border-style: solid;
+  }
+
+  .List{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+
+  }
+  
+  .RequestList {
+    background-color: #C5CAE9;
+    padding: 10px;
+    width: 400px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    border-radius: 4px;
+  }
+  
+  .Requests {
+    padding: 10px;
+    color:#4e535e;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #979ab1;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
+  .RemainingRectangle {
+    text-align: center;
+    width: 1040px;
+    margin-left: 3px;
+    background-color: #f0f0f0;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+  }
+  
+  .footer {
+    position: absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: #303F9F;
+    color: #FFFFFF;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer ul li {
+    display: inline-block;
+    margin-left: 20px;
+  }
+  
+  .footer ul li a {
+    color: #FFFFFF;
+    text-decoration: none;
+  }
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .logo img {
+    height: 40px; /* Adjust the height as per your logo size */
+    margin-right: 10px;
   }
