--- a/godfather-banks/src/Admintest.css
+++ b/godfather-banks/src/Admintest.css
@@ -206,29 +206,85 @@
     z-index: 1;
 
   }
-
-
-  .buttons-list {
-    list-style: none;
+  .RequestInfo {
+    color: red;
+  }
+  
+  .proceed-button {
+    background-color: #af1313;
+    color: #303F9F;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin-left: 10px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  
+  body {
+    background: hsl(220deg, 10%, 97%);
+    margin: 0;
     padding: 0;
-    overflow-y: auto;
-    max-height: 200px; /* Adjust the max height as desired */
   }
   
-  .buttons-list li {
-    margin-bottom: 10px;
-  }
-  
-  .buttons-list li button {
+  .buttons-container {
     width: 100%;
-    padding: 10px;
-    font-size: 18px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+ 
   }
   
+  button {
+    background: white;
+    border: solid 2px black;
+    padding: .375em 1.125em;
+    font-size: 1rem;
+  }
   
+  .button-arounder {
+    font-size: 2rem;
+    background: hsl(216, 70%, 46%);
+    color: hsl(190deg, 10%, 95%);
+    position: absolute;  /* Set the button to absolute positioning */
+    top: 76%;           /* Adjust the top position value */
+    left: 82%;          /* Adjust the left position value */
+    transform: translate(-50%, -50%);  /* Center the button using translate */
+    
+    box-shadow: 0 0px 0px hsla(194, 82%, 37%, 0.575);
+    transfrom: translateY(0);
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    
+    --dur: .15s;
+    --delay: .15s;
+    --radius: 16px;
+    
+    transition:
+      border-top-left-radius var(--dur) var(--delay) ease-out,
+      border-top-right-radius var(--dur) calc(var(--delay) * 2) ease-out,
+      border-bottom-right-radius var(--dur) calc(var(--delay) * 3) ease-out,
+      border-bottom-left-radius var(--dur) calc(var(--delay) * 4) ease-out,
+      box-shadow calc(var(--dur) * 4) ease-out,
+      transform calc(var(--dur) * 4) ease-out,
+      background calc(var(--dur) * 4) steps(4, jump-end);
+  }
   
-  
-  
+  .button-arounder:hover,
+  .button-arounder:focus {
+    box-shadow: 0 4px 8px hsla(61, 92%, 52%, 0.2);
+    
+    background: hsl(224, 65%, 52%);
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
+    border-bottom-left-radius: var(--radius);
+    border-bottom-right-radius: var(--radius);
+  }
   
  
   
