--- a/godfather-banks/src/Home.css
+++ b/godfather-banks/src/Home.css
@@ -5,92 +5,98 @@ body {
   }
   
   /* Header Styles */
-  .header {
+  .home-header {
     background-color: #303F9F;
     padding: 10px;
   }
   
-  .navigation {
+  .home-navigation {
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: #FFFFFF;
   }
   
-  .logo {
+  .home-logo {
     display: flex;
     align-items: center;
   }
   
-  .logo img {
+  .home-logo img {
     height: 40px; /* Adjust the height as per your logo size */
     margin-right: 10px;
   }
-  .logo h1 {
+  .home-logo h1 {
     font-size: 24px;
     margin: 0;
   }
   
-  .navigation ul {
+  .home-navigation ul {
     padding-inline-start: 0px;
     list-style: none;
     display: flex;
   }
   
-  .navigation li {
+  .home-navigation li {
     text-align: center;
     margin-right: 20px;
   }
   
-  .navigation a {
+  .home-navigation a {
     text-decoration: none;
     color: #FFFFFF;
   }
   
-  .user-area {
+  .home-user-area {
     display: flex;
     align-items: center;
   }
   
-  .login-button,
-  .register-button {
-    background-color: #FFFFFF;
-    color: #303F9F;
-    border: none;
-    border-radius: 4px;
-    padding: 8px 16px;
-    margin-left: 10px;
-    font-weight: bold;
-    cursor: pointer;
-  }
+  .home-login-button,
+  .home-register-button {
+      background-color: #FFFFFF;
+      color: #303F9F;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 16px;
+      margin-left: 10px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    
+    .home-login-button:hover,
+    .home-register-button:hover {
+      background-color: #3070ac;
+      color: #ffffff;
+    }
   
   /* Content Styles */
-  .hero-section {
+  .home-hero-section {
     background-color: #3F51B5;
     color: #FFFFFF;
     padding: 20px;
     text-align: center;
   }
   
-  .hero-section h2 {
+  .home-hero-section h2 {
     font-size: 36px;
     margin-bottom: 20px;
   }
   
-  .hero-section p {
+  .home-hero-section p {
     font-size: 18px;
     margin-bottom: 40px;
   }
   
   
-  .features-section {
+  .home-features-section {
     display: flex;
     justify-content: center;
     margin-top: 40px;
     position: relative;
   }
   
-  .feature-card {
+  .home-feature-card {
     background-color: #FFFFFF;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 40px;
@@ -100,22 +106,22 @@ body {
     width: 300px;
   }
   
-  .feature-icon {
+  .home-feature-icon {
     font-size: 48px;
     margin-bottom: 20px;
   }
   
-  .feature-card h3 {
+  .home-feature-card h3 {
     font-size: 24px;
     margin-bottom: 10px;
   }
 
-  .learn-more-container {
+  .home-learn-more-container {
     text-align: center;
     margin-top: 30px; /* Adjust as needed */
   }
   
-  .learn-more-button {
+  .home-learn-more-button {
     background-color: #3F51B5; /* Blue color */
     color: #FFFFFF;
     padding: 10px 20px;
@@ -125,12 +131,12 @@ body {
     cursor: pointer;
   }
   
-  .learn-more-button:hover {
+  .home-learn-more-button:hover {
     background-color: #303F9F; /* Darker blue on hover */
   }
   
   /* Footer Styles */
-  .footer {
+  .home-footer {
     position: absolute;
     left:0;
     bottom:0;
@@ -141,24 +147,24 @@ body {
     text-align: center;
   }
   
-  .footer-content {
+  .home-footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   
-  .footer ul {
+  .home-footer ul {
     list-style: none;
     padding: 0;
     margin: 0;
   }
   
-  .footer ul li {
+  .home-footer ul li {
     display: inline-block;
     margin-left: 20px;
   }
   
-  .footer ul li a {
+  .home-footer ul li a {
     color: #FFFFFF;
     text-decoration: none;
   }
