--- a/godfather-banks/src/Register.css
+++ b/godfather-banks/src/Register.css
@@ -1,52 +1,187 @@
 .registration-page {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
+    min-height: 100vh;
   }
   
-  .registration-heading {
-    margin-bottom: 20px;
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .registration-form {
-    width: 400px;
-  }
-  
-  .registration-step {
-    margin-bottom: 20px;
-  }
-  
-  .registration-step h2 {
-    margin-bottom: 10px;
-    font-size: 18px;
-  }
-  
-  .registration-step input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .registration-step button {
+  .registration-header {
+    background-color: #303F9F;
     padding: 10px 20px;
+  }
+  
+  .registration-navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .registration-logo {
+    display: flex;
+    align-items: center;
+    color: #fff;
+  }
+  
+  .registration-logo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .registration-logo img {
+    height: 40px; /* Adjust the height as per your logo size */
     margin-right: 10px;
   }
   
-  .registration-step button:last-child {
-    margin-right: 0;
+  .registration-logo h1 {
+    font-size: 24px;
+    margin-left: 10px;
   }
   
-  .registration-step button:hover {
-    background-color: #303f9f;
+  .register-home-button {
+    background-color: #FFFFFF;
+    color: #303F9F;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin-left: 10px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .register-home-button:hover {
+    background-color: #3070ac;
     color: #ffffff;
   }
   
-  .registration-step button:disabled {
-    background-color: #cccccc;
-    color: #ffffff;
-    cursor: not-allowed;
+
+  .registration-content {
+    flex-grow: 1;
+    background-color: #f4f4f4;
+    padding: 23px;
+    overflow-y: auto;
+    max-height: calc(100vh - 200px); /* Adjust the height to fit within the viewport */
+  }
+  
+  .registration-form {
+    max-width: 500px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    max-height: 470px; /* Adjust the height as needed */
+    
+  }
+  
+  .registration-stage h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  
+  .registration-form label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: 600;
+    height:7px;
+  }
+  
+  .registration-form input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    height:5px;
+  }
+  
+  .registration-navigation-buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+  }
+  
+  .registration-navigation-buttons .no-account-link {
+    margin-right: auto; /* Added to align the link to the left */
+  }
+  
+  .next-button,
+  .register-button,
+  .previous-button  {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .next-button:hover,
+  .register-button:hover,
+  .previous-button:hover {
+    background-color: #0056b3;
+  }
+  
+  .previous-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+  
+  
+  
+  .registration-progress {
+    margin-top: 30px;
+  }
+  
+  .progress-bar {
+    height: 5px;
+    background-color: #007bff;
+    margin-bottom: 10px;
+  }
+  
+  .progress-steps {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .progress-step {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .progress-step span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+  .progress-step p {
+    margin-top: 5px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #777;
+  }
+  
+  .progress-step.active span {
+    background-color: #0056b3;
+  }
+  
+  .registration-footer {
+    background-color: #303F9F;
+    color: #fff;
+    padding: 11px 20px;
+    text-align: center;
+    font-size: 14px;
   }
   
