register.css(edited)

--- a/godfather-banks/src/Register.css
+++ b/godfather-banks/src/Register.css
@@ -174,7 +174,7 @@
   }
   
   .progress-step.active span {
-    background-color: #0056b3;
+    background-color: #002a5d;
   }
   
   .registration-footer {
