added confrimation pages & registeration pages & and some changes

--- a/godfather-banks/src/Login.css
+++ b/godfather-banks/src/Login.css
@@ -77,7 +77,7 @@ body {
     border-radius: 4px;
   }
   
-  .login-button {
+  .login2-button {
     background-color: #3F51B5;
     color: #FFFFFF;
     border: none;
@@ -116,7 +116,7 @@ body {
     margin-top: 8px;
   }
 
-  .login-button:hover {
+  .login2-button:hover {
     background-color: #303f9f;
   }
   
