hover homePage header

--- a/godfather-banks/src/Home.css
+++ b/godfather-banks/src/Home.css
@@ -16,6 +16,11 @@ body {
     justify-content: space-between;
     color: #FFFFFF;
   }
+
+  .home-navigation ul li:hover{
+    text-decoration: underline;
+  }
+  
   
   .home-logo {
     display: flex;
