--- a/godfather-banks/src/Banker.css
+++ b/godfather-banks/src/Banker.css
@@ -4,66 +4,6 @@ body {
     font-family: Arial, sans-serif;
   }
   
-  /* Header Styles */
-  .header-banker {
-    background-color: #303F9F;
-    padding: 10px;
-  }
-  
-  .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #FFFFFF;
-  }
-  
-  .logo h1 {
-    font-size: 24px;
-    margin: 0;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  
-  .navigation ul {
-    padding-inline-start: 0px;
-    margin-right: 160px;
-    list-style: none;
-    display: flex;
-    align-items: center;
-  }
-  
-  .navigation li {
-    text-align: center;
-    margin-right: 20px;
-  }
-
-  .control {
-    text-align: center;
-  }
-  
-  .navigation a {
-    text-decoration: none;
-    color: #FFFFFF;
-  }
-  
-  .user-area {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logout-button-banker {
-    font-size: 13px;
-    background-color: #FFFFFF;
-    color: #303F9F;
-    border-style: none;
-    border-radius: 4px;
-    padding: 8px 16px;
-    margin-left: 10px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-
   .body {
     margin: 3px;
     display: flex;
@@ -245,6 +185,8 @@ body {
     width: 70px;
     height: 30px;
     background-color: #cc4c4c;
+    font-weight: bold;
+    border-color: #823030;
     color: #ffffff;
     cursor: pointer;
   }
