--- a/godfather-banks/src/client/Client.css
+++ b/godfather-banks/src/client/Client.css
@@ -29,13 +29,13 @@
 .clientCards{
     display:flex;
     align-items: center;
-    margin: 40px 100px;
+    margin: 27px 100px;
     flex-wrap: wrap;
     justify-content: center;
     gap:10px;
 }
 
-.clientCards button{
+.clientCardButton{
     flex-basis:27%;
     letter-spacing: 3px;
     height:170px;
@@ -57,14 +57,16 @@
 }
 
 
-.clientCards button:hover {
-    background-color: #377ad1;
-  }
-
-.clientCards button img{
+.clientCardButton img{
     height:100px;
     width:100px;
 }
+
+.clientCardButton:hover {
+    background-color: #377ad1;
+  }
+
+
 
 .report-container{
     position:relative;
