--- a/godfather-banks/src/client/BillReminder.css
+++ b/godfather-banks/src/client/BillReminder.css
@@ -2,13 +2,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 220px;
+    margin-top: 200px;
+    margin-right: 20px;
+    transform: scale(1.4);
   }
   
   .reminder-button {
     padding: 10px 20px;
     font-size: 30px;
     border-radius: 9px;
+  }
+
+  .reminder-button:hover{
+    background-color: #0056b3;
+    cursor:pointer;
   }
   
   .bill-prompt {
@@ -21,9 +28,9 @@
   
   .bill-prompt label,
   .bill-prompt select {
-    font:30px;
+    font:15px;
     margin-bottom: 10px;
-    size: 30px;
+    size: 50px;
   }
   
   .bill-prompt button {
@@ -31,10 +38,20 @@
     font-size: 14px;
     border-radius: 9px;
   }
+
+  .setReminderButton:hover{
+      background-color: #0056b3;
+      cursor:pointer;
+  }
   
   .confirmation-message {
     margin-top: 10px;
     font-size: 14px;
     color: green;
+  }
+
+  #billSelect{
+    width: 100px;
+    height: 100px;
   }
   
