--- a/godfather-banks/src/client/CreditPoints.css
+++ b/godfather-banks/src/client/CreditPoints.css
@@ -45,6 +45,11 @@
     cursor: pointer;
     font-size: 16px;
   }
+  .redeem-form button:hover {
+    background-color: #0174aa;  
+  }
+
+    
   
   .redeem-confirmation-message {
     color:#4caf50;
