--- a/godfather-banks/src/admin/Admintest.css
+++ b/godfather-banks/src/admin/Admintest.css
@@ -150,7 +150,7 @@
   
   .button-arounder {
     font-size: 2rem;
-    background:hsl(216, 81%, 60%);
+    background: hsl(224, 65%, 52%);
     color: hsl(190deg, 10%, 95%);
     position: absolute;  /* Set the button to absolute positioning */
     top: 75%;           /* Adjust the top position value */
@@ -159,7 +159,7 @@
     transform: translate(-50%, -50%);  /* Center the button using translate */
     
     
-    box-shadow: 0 0px 0px hsla(194, 82%, 37%, 0.575);
+    box-shadow: 0 0px 0px hsl(224, 65%, 52%);
     transfrom:translateY(0);
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
@@ -343,7 +343,7 @@
     padding: 10px;
     left: 85%;
     top:85%;
-    background-color: blue;
+    background-color: hsl(224, 65%, 52%);;
     color: #ffffff;
     border: none;
     border-radius: 4px;
