admin procced button changes

--- a/godfather-banks/src/admin/Admintest.css
+++ b/godfather-banks/src/admin/Admintest.css
@@ -311,6 +311,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    border-radius: 4px;
     
   }
   .proceed-button:hover{
