--- a/godfather-banks/src/client/Transfers.css
+++ b/godfather-banks/src/client/Transfers.css
@@ -24,6 +24,7 @@
   }
   
   .Transfers-form label {
+    padding:8px;
     display: block;
     margin-bottom: 5px;
   }
@@ -35,6 +36,7 @@
     padding: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
+    margin-bottom:7px;
   }
   
   .Transfers-form .Transfers-button {
