--- a/godfather-banks/src/home/Login.css
+++ b/godfather-banks/src/home/Login.css
@@ -78,6 +78,7 @@ body {
   }
   
   .login2-button {
+    margin-bottom:25px;
     background-color: #3F51B5;
     color: #FFFFFF;
     border: none;
